# voice-bot

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .env.local.example  .env.prod.example  .env.test.example  .gitattributes  .gitignore  .hadolint.yaml  .jscpd.json  .lychee.toml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  .shellcheckrc  .typos.toml  .yamllint.yaml  AGENT.md  AGENTS.md  CLAUDE.md  CODEBASE_ANALYSIS_2026-05-04.md  CODEOWNERS  COMPREHENSIVE_SUMMARY_2026-05-04.md  CONTRIBUTING.md  Containerfile  Dockerfile  EXECUTIVE_SUMMARY_2026-05-04.md  FILES_CHANGED_SUMMARY.md  LICENSE  Makefile  QUICK_START.md  README.dev.md  README.md  SECURITY.md  Taskfile.yml  alembic.ini  bandit.toml  compose.prod.yml  compose.test.yml  (+12 more)
.claude/: settings.json
.claude/agents/: code-reviewer.md  ddd-specialist.md  debugger.md  frontend-reviewer.md
.claude/rules/: ddd.md  sdd.md  tdd.md
.devcontainer/: Containerfile.dev  Containerfile.dev.dockerignore  Dockerfile  README.md  compose.yml  devcontainer.json  extensions.json  post-start.zsh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: ddd-specialist.agent.md  debug.agent.md  deep-thinking.agent.md  expert-react-frontend-engineer.agent.md  modernization.agent.md
.github/hooks/: dependency-license-checker.json  hooks.json  tool-guardian.json
.github/instructions/: architecture.instructions.md  ddd.instructions.md  (+6 more)
alembic/: env.py
azure/: README.md  deploy.ps1  deploy.sh
backend/: README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/src/ekko/: __init__.py
backend/src/ekko/ai/: __init__.py
backend/src/ekko/ai/chains/: conversational.py
backend/src/ekko/ai/crewai/: __init__.py  crew.py  models.py  yaml_config.py
backend/src/ekko/ai/crewai/config/: agents.yaml  tasks.yaml
backend/src/ekko/ai/crewai/tools/: __init__.py  retrieval_tool.py
backend/src/ekko/ai/embeddings/: __init__.py  service.py
backend/src/ekko/ai/llm/: __init__.py  adapter.py
backend/src/ekko/application/services/: chat_service.py
backend/src/ekko/cli/: run_app.py
backend/src/ekko/composition/: __init__.py  app_factory.py  container.py
backend/src/ekko/config/: __init__.py  logging_config.py  openapi_config.py
backend/src/ekko/config/enums/: __init__.py
backend/src/ekko/config/settings/: __init__.py  base.py  local.py  prod.py  staging.py  test_env.py
backend/src/ekko/core/: enums.py  protocols.py  registry_constants.py
backend/src/ekko/core/enums/: __init__.py  ai.py  base.py
backend/src/ekko/core/interfaces/: embedding.py  llm.py
backend/src/ekko/infrastructure/: __init__.py  tcp_queue.py
backend/src/ekko/infrastructure/adapters/: audio_streamer_adapter.py  stt_adapter.py
backend/src/ekko/infrastructure/audio_streamer/: audio_streamer_controller.py  audio_streamer_tcp_server.py
backend/src/ekko/infrastructure/db/: base.py  session.py
backend/src/ekko/infrastructure/helpers/: retry.py
backend/src/ekko/infrastructure/openai/: openai_client.py
backend/src/ekko/infrastructure/stt/: azure_speech_stt.py
backend/src/ekko/managers/: __init__.py
backend/src/ekko/presentation/api/middleware/: authentication.py  cors.py  request_id.py  security_headers.py  timing.py
backend/src/ekko/presentation/api/routes/: __init__.py  health.py  stream.py
backend/src/ekko/presentation/api/schemas/: auth.py  health.py  responses.py  stream.py
backend/src/ekko/presentation/graphql/: extensions.py  permissions.py  queries.py  router.py  schema.py
backend/src/ekko/utils/: __init__.py  common.py
backend/src/ekko/utils/enums/: __init__.py
backend/tests/: README.md  conftest.py
backend/tests/e2e/: example_backend_healthcheck.py
backend/tests/factories/: __init__.py  entity_factories.py
backend/tests/fixtures/: __init__.py  conversations.py  graphql_fixtures.py  transcripts.py
backend/tests/fixtures/audio/: generate_fixtures.py
backend/tests/integration/: conftest.py  test_services_available.py
backend/tests/integration/infrastructure/: __init__.py  conftest.py  test_audio.py  test_db.py  test_llm.py  test_stt.py
backend/tests/property/: conftest.py  test_jwt_properties.py  test_registry_constants.py  test_settings_properties.py
backend/tests/unit/: test_container.py
backend/tests/unit/ai/: test_conversational_chain.py
backend/tests/unit/application/: test_chat_service.py  test_summarizer_service.py
backend/tests/unit/config/: test_settings.py
backend/tests/unit/core/: test_entities.py  test_enums.py
backend/tests/unit/infrastructure/: test_jwt_adapter.py  test_queue_manager.py  test_thread_manager.py
backend/tests/unit/presentation/: test_auth_middleware.py  test_graphql_schema.py  test_health_route.py
backend/tests/utils/: assertion_helpers.py
caddy/: Caddyfile  Containerfile
docker/: Containerfile  Dockerfile  Dockerfile.app  Dockerfile.frontend  README.md  compose.dev.yml  compose.override.yml  compose.postgres.yml  compose.prod.yml  compose.test.yml  compose.yaml  compose.yml  docker-compose.yml
docs/: ARCHITECTURE.md  AZURE_SPEECH_SETUP.md  AZURE_STT_MIGRATION_SUMMARY.md  DB_SETUP.md  DEV_SETUP.md  ENUMS.md  IAC.md  IMPLEMENTATION_SUMMARY.md  LLM_ADAPTER.md  MODERNIZATION_PLAN_2026-05-04.md  MODERNIZATION_SUMMARY_2026-05-04.md  PRIORITIZED_CHANGES.md  PROMPTS.md  PROPOSED_NAMES.md  gap_analysis.md  tcp_ipc.md
e2e/: example.spec.ts
frontend/: biome.json  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
registry/: generate_registry.py  naming_registry.json
scripts/: bootstrap-uv.sh  check_architecture_boundaries.py  find_commitizen_toml.py  test-local.sh  verify-pipeline.ps1  verify-pipeline.sh
tasks/: backend.yml
tests/: conftest.py  test_audio_streamer_controller.py  test_chat_adapter.py  test_chat_service.py  test_queue_manager.py  test_summarizer_service.py  test_tcp_queue.py  test_thread_manager.py  test_transcript_bridge.py
(+233 files in other folders)
