[project]
name = "voice"
version = "0.1.0"
description = "Project implementation and execution of the voice product of TIK"
authors = [
    {name = "Laurits Fromberg", email = "lfr@tik-ai.dk"},
]
dependencies = [
        "fastapi>=0.116.1",
        "uvicorn>=0.35.0",
        "openai>=1.101.0",
        "keyboard>=0.13.5",
        "pyaudiowpatch>=0.2.12.7",
        "websockets>=15.0.1",
        "python-dotenv>=1.1.1",
        "tiktoken>=0.11.0",
        "faster-whisper>=1.2.0",
        "numpy>=1.26",
]

requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "mypy>=1.17.1",
    "bandit[toml]>=1.8.6",
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.12.0",
    "detect-secrets>=1.5.0",
    "yamllint>=1.37.1",
    "typos>=1.35.5",
    "pyinstaller>=6.15.0",
    "commitizen>=4.8.3",
    "xenon>=0.9.3",
    "psycopg2-binary>=2.9",
    "redis>=5.0"
]

[tool.pdm]
distribution = false

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "build", "dist"]
skips = ["B614", "B101"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration (use -m integration to run)",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["attr-defined"]
check_untyped_defs = true
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"src/voice/models/transcribers/transcriber.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
