[project]
name = "ekko"
version = "0.1.0"
description = "Ekko — AI-powered voice assistant platform"
authors = [
    {name = "Laurits Fromberg", email = "lfr@tik-ai.dk"},
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "openai>=2.36.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.18",
    "alembic>=1.11.1",
    "aiosqlite>=0.20.0",
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "keyboard>=0.13.5; sys_platform == 'win32'",
    "pyaudiowpatch>=0.2.12.7; sys_platform == 'win32'",
    "websockets>=15.0.1",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "azure-cognitiveservices-speech>=1.40.0",
    "numpy>=2.4.5",
    "structlog>=24.0.0",
    "strawberry-graphql[fastapi]>=0.262",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "urllib3>=2.7.0",
    "crewai>=1.14.4",
    "mako>=1.3.12",
]

requires-python = ">=3.12,<4.0"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ekko = "ekko.cli.run_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ekko"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.5",
    "pytest-benchmark>=5.0",
    "hypothesis>=6.120",
    "factory-boy>=3.3",
    "freezegun>=1.4",
    "respx>=0.22",
    "pre-commit>=4.3.0",
    "ruff>=0.12.0",
    "commitizen>=4.8.3",
    "ty>=0.0.32",
    "bandit[toml]>=1.8.6",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.9",
    "xenon>=0.9.3",
    "typos>=1.35.5",
    "yamllint>=1.37.1",
    "tox>=4.25",
    "tox-uv>=1.25",
    "pyinstaller>=6.0",
    "testcontainers[postgres]>=4.8.2",
    "asyncpg>=0.30.0",
]
db = [
    "sqlalchemy>=2.0",
    "alembic>=1.11",
    "aiosqlite>=0.20.0",
]
rag = [
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "chromadb>=0.3.25",
]

[tool.uv]
package = false
default-groups = ["dev"]
